--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "private": "true",
-  "name": "architecture",
-  "version": "0.0.1",
+  "name": "animerest",
+  "version": "0.1.0",
   "author": "unknow9error",
-  "description": "frontend architecture",
+  "description": "animerest website",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@react-three/drei": "^9.22.7",
@@ -12,6 +12,7 @@
     "antd": "^4.21.7",
     "framer-motion": "^6.5.1",
     "gapi-script": "^1.2.0",
+    "i18n": "^0.15.0",
     "jwt-decode": "^3.1.2",
     "luxon": "^3.0.1",
     "react": "^18.2.0",
@@ -32,6 +33,14 @@
     "@babel/preset-flow": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-interactions": "^6.5.10",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/manager-webpack5": "^6.5.10",
+    "@storybook/react": "^6.5.10",
+    "@storybook/testing-library": "^0.0.13",
     "@types/luxon": "^3.0.0",
     "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
@@ -64,6 +73,8 @@
     "build:development": "cross-env NODE_ENV=development webpack --config webpack.prod.js",
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
     "lint": "npm run tslint-check && tslint -c tslint.json 'src/**/*.{ts,tsx}' --fix --format verbose",
-    "prettier": "prettier --check \"src/**/*.ts\""
+    "prettier": "prettier --check \"src/**/*.ts\"",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   }
 }
